--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 							<img src="Logo1.png" alt="sivun logo" class="img-fluid paalogo">
 						</div>
 						<div class="col-md-3">
-							<a href="Book_t.html">
+							<a href="Book_T.html">
 								<img src="Booking_button.png" alt="To table booking" class="img-fluid B_img mx-auto d-block"> 
 							</a>
 						</div>
