--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="Styles.css">
 	</head>
 	<body>
-	<a href="Book_t.html" class="B_button">
+	<a href="Book_T.html" class="B_button">
 			<img src="Booking_button.png" alt="To table booking" class="img-fluid"> 
 		</a>	
 		<div class="main_tausta">
