--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class= "col-md-3 wider_text">
-							<p>Opening hours</p>
-							<p>Opening hours</p>
-							<p>Opening hours</p>
+							<p>Master chef John Smith</p>
+							<p>john.smith@this mail.com</p>
+							<p>050123456</p>
 						</div>
 						<div class="col-md-6">
 							<img src="Logo1.png" alt="sivun logo" class="img-fluid paalogo">
@@ -27,10 +27,10 @@
 								</button>
 								<div class="collapse navbar-collapse" id="drop_navi">
 									<ul class="navbar-nav">
-										<li class="nav-item"><a class="nav-link ilmaa2 side_links" href="menu.html">Menu</a></li>
-										<li class="nav-item"><a class="nav-link side_links" href="#">Bar</a></li>
+										<li class="nav-item"><a class="nav-link ilmaa2 side_links" href="menu.html">CV</a></li>
+										<li class="nav-item"><a class="nav-link side_links" href="#">History</a></li>
 										<li class="nav-item"><a class="nav-link side_links" href="#">Gallery</a></li>
-										<li class="nav-item"><a class="nav-link side_links" href="Book_T.html">Book a table</a></li>
+										<li class="nav-item"><a class="nav-link side_links" href="Book_T.html">Contact me</a></li>
 									</ul>
 								</div>	
 							</nav>
@@ -46,14 +46,52 @@
 							<nav class="main_nav">
 								<ul class="nav nav-tabs justify-content-center">
 									<li class="nav-item"><a href="index.html" class="nav-link Teal_links active">Home</a></li>	
-									<li class="nav-item"><a href="menu.html" class="nav-link Teal_links">Menu</a></li>
-									<li class="nav-item"><a href="Contact_us.html" class="nav-link Teal_links">Contact Us!</a></li>
+									<li class="nav-item"><a href="menu.html" class="nav-link Teal_links">History</a></li>
+									<li class="nav-item"><a href="Contact_us.html" class="nav-link Teal_links">Contact Me!</a></li>
 								</ul>
 							</nav>
 						</div>
 					</div>	
 				</div>	
 			</header>	
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12 tekstitaustalla" >
+						<h2 class="keskitetty_otsikko ilmaa4">About John</h2>
+					</div>
+				</div>		
+			</div>
+			<div class="contaner-fluid B_back">
+				<br>
+			</div>
+			<div class="container-fluid">	
+				<div class="row">
+					<div class="col-md-8 tekstitaustalla ilmaa4">
+						<p class="ilmaa">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br> 
+						nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <br>
+						Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <br> 
+						suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br>
+						</p>
+						<p class="ilmaa">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br>
+						sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<br>
+						Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.<br>
+						Duis autem vel eum iriure dolor in hen
+						</p>
+						<p class="ilmaa">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br> 
+						nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <br>
+						Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <br> 
+						suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br>
+						</p>
+					</div>	
+					<div class="col-md-4">
+						<img src="kokki.png" alt="kuva kokista" class="img-fluid person_pic" >
+					</div>
+				</div>
+			</div>
+			<div class="contaner-fluid B_back">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12 ilmaa B_back">
@@ -104,43 +142,7 @@
 				<div class="container-fuid B_back">
 					<img src="Br_bar.png" class="Br_kuva" alt="sivu leikkautuu sinertävällä kuvalla">
 				</div>
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-12 tekstitaustalla" >
-							<h2 class="keskitetty_otsikko ilmaa4">About</h2>
-						</div>
-					</div>		
-				</div>
-				<div class="contaner-fluid B_back">
-					<br>
-				</div>
-				<div class="container-fluid">	
-					<div class="row">
-						<div class="col-md-8 tekstitaustalla ilmaa4">
-							<p class="ilmaa">
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br> 
-							nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <br>
-							Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <br> 
-							suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br>
-							</p>
-							<p class="ilmaa">
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br>
-							sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<br>
-							Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.<br>
-							Duis autem vel eum iriure dolor in hen
-							</p>
-							<p class="ilmaa">
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br> 
-							nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <br>
-							Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <br> 
-							suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br>
-							</p>
-						</div>	
-						<div class="col-md-4">
-							<img src="kokki.png" alt="kuva kokista" class="img-fluid person_pic" >
-						</div>
-					</div>
-				</div>
+				
 				<div class="contaner-fluid B_back">
 					<br>
 				</div>
@@ -205,9 +207,9 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-3 wider_text">
-							<p>Opening hours</p>
-							<p>Opening hours</p>
-							<p>Opening hours</p>
+							<p>Masterful food</p>
+							<p>Best practices</p>
+							<p>Contact me</p>
 						</div>
 						<div class="col-md-6 teal_c">
 							<img src="Logo1.png" alt="sivun logo" class="img-fluid paalogo">
