fitting to theme

--- a/menu.html
+++ b/menu.html
@@ -16,9 +16,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class= "col-md-3 avaamis_ajat">
-							<p>Opening hours</p>
-							<p>Opening hours</p>
-							<p>Opening hours</p>
+			
 						</div>
 						<div class="col-md-6">
 							<img src="Logo1.png" alt="sivun logo" class="img-fluid paalogo">
@@ -30,10 +28,10 @@
 								</button>
 								<div class="collapse navbar-collapse" id="drop_navi">
 									<ul class="navbar-nav">
-										<li class="nav-item"><a class="nav-link ilmaa2 side_links" href="menu.html">Menu</a></li>
-										<li class="nav-item"><a class="nav-link side_links" href="#">Bar</a></li>
+										<li class="nav-item"><a class="nav-link ilmaa2 side_links" href="menu.html">CV</a></li>
+										<li class="nav-item"><a class="nav-link side_links" href="#">History</a></li>
 										<li class="nav-item"><a class="nav-link side_links" href="#">Gallery</a></li>
-										<li class="nav-item"><a class="nav-link side_links" href="Book_T.html">Book a table</a></li>
+										<li class="nav-item"><a class="nav-link side_links" href="Book_T.html">Contact me</a></li>
 									</ul>
 								</div>	
 							</nav>
@@ -49,8 +47,8 @@
 							<nav class="main_nav">
 								<ul class="nav nav-tabs justify-content-center">
 									<li class="nav-item"><a href="index.html" class="nav-link Teal_links">Home</a></li>	
-									<li class="nav-item"><a href="menu.html" class="nav-link Teal_links active">Menu</a></li>
-									<li class="nav-item"><a href="Contact_us.html" class="nav-link Teal_links">Contact Us!</a></li>
+									<li class="nav-item"><a href="menu.html" class="nav-link Teal_links active">History</a></li>
+									<li class="nav-item"><a href="Contact_us.html" class="nav-link Teal_links">Contact Me</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -75,7 +73,7 @@
 							<img src="Sign_left_W.png" alt="koriste yökkönen lentää vasemmalle" class="img-fluid special_hr">
 						</div>
 						<div class="col-md-4 tekstitaustalla">
-							<h4 class="ilmaa4 keskitetty_otsikko  wider_text">Alkupalat</h4>
+							<h4 class="ilmaa4 keskitetty_otsikko  wider_text">Collaborations</h4>
 						</div>
 						<div class="col-md-4 teal_c">
 							<img src="Sign_right_W.png" alt="Koriste yökkönen lentää oikealle" class="img-fluid special_hr">
@@ -106,7 +104,7 @@
 				<div class="container-fluid">
 					<div class="row tekstitaustalla">
 						<div class="col-md-12">
-							<h3 class="keskitetty_otsikko wider_text ilmaa4">Pääruuat</h3>
+							<h3 class="keskitetty_otsikko wider_text ilmaa4">Best dishes</h3>
 						</div>
 					</div>
 				</div>
@@ -140,7 +138,7 @@
 							<img src="Sign_right_W.png" alt="Valkoinen yökkönen lentää oikealle" class="img-fluid special_hr">
 						</div>
 						<div class="col-md-4 tekstitaustalla">
-							<h4 class="ilmaa4 keskitetty_otsikko  wider_text">Jälkiruuat</h4>
+							<h4 class="ilmaa4 keskitetty_otsikko  wider_text">Rewards</h4>
 						</div>
 						<div class="col-md-4 B_back">
 							<img src=" Sign_left_W.png" alt=" Valkoinen yökkönen lentää vasemmalle" class="img-fluid special_hr">
