making look more like cv

--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
 				<div class="row">
 					<div class="col-md-8 tekstitaustalla ilmaa4">
 						<p class="ilmaa">
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br> 
-						nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <br>
-						Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <br> 
-						suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br>
+						Skilled cook with 2+ years’ experience.<br>
+						 Extensive knowledge of food industry and its relation to the day-to-day busy kitchen restaurant setting. <br>
+						 Very good attention to detail, both in cooking and inventory management.<br>
+ 						Effective at communicating with other staff, manager, and chef during 60+ guest rush hour.<br>
 						</p>
+						<div class="ilmaa">
+							<ul>
+								<li>Supervised the preparation of dishes. Often managed a kitchen staff of 9.</li>
+								<li>Provided customers with five-star meals from a constantly perfected menu.</li>
+								<li>Served under the most recognized burger chef in the city (per Raleigh Daily’s food column). <br>
+									Got frequent praise and commendation for my work from my superior.</li>
+								<li>Received nearly daily compliments from clients on recipes personally introduced to the restaurant menu. Restaurant star rating increased from 4.3 to 4.7</li>
+							</ul>
+						</div>
 						<p class="ilmaa">
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br>
-						sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<br>
-						Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.<br>
-						Duis autem vel eum iriure dolor in hen
-						</p>
-						<p class="ilmaa">
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br> 
-						nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <br>
-						Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <br> 
-						suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br>
+						
 						</p>
 					</div>	
 					<div class="col-md-4">
