--- a/menu.html
+++ b/menu.html
@@ -179,7 +179,7 @@
 							<img src=" Sign_left_W.png" alt=" Valkoinen yökkönen lentää vasemmalle" class="img-fluid special_hr">
 						</div>
 					</div>
-				div class="container-fluid">
+				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12 B_back">
 							<img src="Jälkiruoka.jpg" alt="kuva herkullisesta jäätelöstä" class="taustalla img-fluid">
