--- a/menu.html
+++ b/menu.html
@@ -184,18 +184,18 @@
 						<div class="col-md-12 B_back">
 							<img src="Jälkiruoka.jpg" alt="kuva herkullisesta jäätelöstä" class="taustalla img-fluid">
 							<div class="menu_box puoliksi_päällä tekstitaustalla">
-								<p class="wider_text keskitetty_teksti ">    With a philosophy of best products, wonderful discipline, excellent teachers,<br>
-									 a family atmosphere, and passion, “always passion”, and a maximum of 16 students per class,<br>
-									  this is a school focused on providing the optimum environment for learning.</p>
-								<p class=" wider_text keskitetty_teksti "> The campus, with two 110m2 fully equipped professional kitchens and a classroom for learning French,<br>
-									 provides the opportunity to learn gastronomic French cooking and patisserie to a 1 Michelin Star Level in fantastic conditions. </p>
+								<p class="wider_text keskitetty_teksti ">    With a philosophy of best products, wonderful discipline, <br>excellent teachers,
+									 a family atmosphere, and passion, “always passion”, <br> and a maximum of 16 students per class,<br>
+									  this is a school focused on providing <br> the optimum environment for learning.</p>
+								<p class=" wider_text keskitetty_teksti "> The campus, with two 110m2 fully equipped professional kitchens <br> and a classroom for learning French,
+									 provides the opportunity to learn gastronomic French  <br>cooking and patisserie to a 1 Michelin Star Level in fantastic conditions. </p>
 								<p class=" wider_text keskitetty_teksti ">Another exciting feature that the school offers, <br>
 									which is unique among Europe’s top culinary schools,<br>
-									 is the option to live in a beautiful seaside resort located just 10 minutes from the school.
+									 is the option to live in a beautiful seaside resort <br> located just 10 minutes from the school.
 								</p>
-								<p class="keskitetty_teksti wider_text "> The school offers a range of courses for professionals and beginners <br>
-									lasting from 1 month to a year and ending with certificates and diplomas in cooking,<br>
-									 pastry, and the French language awarded by French government ministries.</p>
+								<p class="keskitetty_teksti wider_text "> The school offers a range of coursesbr> for professionals and beginners <br>
+									lasting from 1 month to a year and ending <br> with certificates and diplomas in cooking,<br>
+									 pastry, and the French language <br>awarded by French government ministries.</p>
 							</div>
 						</div>
 					</div>
