--- a/index.html
+++ b/index.html
@@ -184,25 +184,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="contaner-fluid B_back">
-					<br>
-				</div>
-				<div class="container-fluid">
-					<div class="row ala_bar">
-						<div class="col-md-8">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28928.027636145816!2d-71.01750961661052!3d24.99999857523423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89451ab5034cb7ab%3A0xb600ecf3df7aca4d!2sBermudan%20kolmio!5e0!3m2!1sfi!2sfi!4v1590318880668!5m2!1sfi!2sfi" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="kartta img-fluid"></iframe>
-						</div>
-						<div class="col-md-4 tekstitaustalla avaamis_ajat ilmaa4">
-							<p>Lorem ipsum dolor sit amet </p>
-							<p>consectetuer adipiscing elit</p>
-							<p>sed diam nonummy nibh euismod tincidunt ut </p>
-							<p>laoreet dolore magna aliquam erat volutpat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="contaner-fluid B_back">
-					<br>
-				</div>
+			
+				<iframe src="https://fxo.io/m/structure-foreground-7609" width="100%" height="100%" style="border: 3px solid #f9f9fb; width: 100%; height: 100%;" allowfullscreen></iframe>
+
 			<footer>
 				<div class="container-fluid">
 					<div class="row">
@@ -227,5 +211,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+		<script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IiMwMGIyY2MiLCJ3ZWIiOnsiYm90SWQiOiI2MTkyMGE4YmQxNzljYjAxYWU1OGE4MGUiLCJ0aGVtZSI6IiMwMGIyY2MifX0=" async defer></script>
 	</body>
 </html>	
