--- a/menu.html
+++ b/menu.html
@@ -140,6 +140,7 @@
 						<div class="col-md-4 tekstitaustalla">
 							<h4 class="ilmaa4 keskitetty_otsikko  wider_text">Rewards</h4>
 						</div>
+						<a id="rewards"></a>
 						<div class="col-md-4 B_back">
 							<img src=" Sign_left_W.png" alt=" Valkoinen yökkönen lentää vasemmalle" class="img-fluid special_hr">
 						</div>
@@ -175,6 +176,7 @@
 						<div class="col-md-4 tekstitaustalla">
 							<h4 class="ilmaa4 keskitetty_otsikko  wider_text">Education</h4>
 						</div>
+							<a id="education">
 						<div class="col-md-4 B_back">
 							<img src=" Sign_left_W.png" alt=" Valkoinen yökkönen lentää vasemmalle" class="img-fluid special_hr">
 						</div>
