--- a/menu.html
+++ b/menu.html
@@ -219,6 +219,10 @@
 				</div>
 		</footer>	
 		</div>	
-		<script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IiMwMGIyY2MiLCJ3ZWIiOnsiYm90SWQiOiI2MTkyMGE4YmQxNzljYjAxYWU1OGE4MGUiLCJ0aGVtZSI6IiMwMGIyY2MifX0=" async defer></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+		<script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IiM2N2MxOGUiLCJ3ZWIiOnsiYm90SWQiOiI2MTk5MGZhNWQzNzUyZDI0ZmZjNGJiMDUiLCJ0aGVtZSI6IiM2N2MxOGUiLCJsYWJlbCI6IkpvaG5zIFNvdXMgQ2hlZiJ9LCJ3ZWxjb21lVGV4dCI6IkJvbmpvdXIhIiwicG9wdXBIZWlnaHQiOiI1MCUifQ==" async defer></script>
 	</body>
 </html>	
